# Code-Refine-AI

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  render.yaml
backend/: pyproject.toml  requirements.txt
backend/app/: main.py  schemas.py
backend/app/services/: llm.py
extension/: CHANGELOG.md  coderefine-ai-0.0.1.vsix  package-lock.json  package.json  test.py
extension/src/: extension.ts
